--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,46 @@
-h1, h2{
-    text-align: center;
-    color: grey;
+:root {
+  --bg-b1ack-900: #f2f2fc;
+  --bg-black-100: #fdf9ff;
+  --bg-black-50: #e8dfec;
+  --text-black-900: #302e4d;
+  --text-black-700: #504e70;
 }
-p { 
+.section {
+  background: var(--bg-b1ack-900);
+  min-height: 100vh;
+  display: block;
+  position: fixed;
+  left: 270;
+  right: 0;
+  top: 0;
+}
+
+h1,
+h2 {
+  text-align: center;
+  color: grey;
+}
+
+p {
+  text-align: center;
   font-size: 15px;
 }
-body{
-  font-family:cursive;
+
+body {
+  font-family: cursive;
   background-color: rgb(249, 232, 223);
+  line-height: 1.5;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+  outline:
+    none;
+  text-decoration: none;
+  box-sizing: border- box;
 }
-hr{
-  height:5px ;
-  background-color: pink;
-  border-color: brown;
-  }
-  
+
+::before,
+::after {
+
+  box-sizing: border-box;
+}
